crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_tpch_q13_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q13"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                       |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: custdist DESC NULLS FIRST, c_orders.c_count DESC NULLS FIRST                                                                         |
|               |   Projection: c_orders.c_count, count(Int64(1)) AS custdist                                                                                |
|               |     Aggregate: groupBy=[[c_orders.c_count]], aggr=[[count(Int64(1))]]                                                                      |
|               |       SubqueryAlias: c_orders                                                                                                              |
|               |         Projection: count(orders.o_orderkey) AS c_count                                                                                    |
|               |           Aggregate: groupBy=[[customer.c_custkey]], aggr=[[count(orders.o_orderkey)]]                                                     |
|               |             Projection: customer.c_custkey, orders.o_orderkey                                                                              |
|               |               Left Join: customer.c_custkey = orders.o_custkey                                                                             |
|               |                 TableScan: customer projection=[c_custkey]                                                                                 |
|               |                 Projection: orders.o_orderkey, orders.o_custkey                                                                            |
|               |                   Filter: orders.o_comment NOT LIKE LargeUtf8("%special%requests%")                                                        |
|               |                     TableScan: orders projection=[o_orderkey, o_custkey, o_comment]                                                        |
| physical_plan | SortPreservingMergeExec: [custdist@1 DESC, c_count@0 DESC]                                                                                 |
|               |   ProjectionExec: expr=[c_count@0 as c_count, count(Int64(1))@1 as custdist]                                                               |
|               |     SortExec: expr=[count(Int64(1))@1 DESC, c_count@0 DESC], preserve_partitioning=[true]                                                  |
|               |       AggregateExec: mode=FinalPartitioned, gby=[c_count@0 as c_count], aggr=[count(Int64(1))]                                             |
|               |         RepartitionExec: partitioning=Hash([c_count@0], 16), input_partitions=16                                                           |
|               |           AggregateExec: mode=Partial, gby=[c_count@0 as c_count], aggr=[count(Int64(1))]                                                  |
|               |             ProjectionExec: expr=[count(orders.o_orderkey)@1 as c_count]                                                                   |
|               |               AggregateExec: mode=SinglePartitioned, gby=[c_custkey@0 as c_custkey], aggr=[count(orders.o_orderkey)], ordering_mode=Sorted |
|               |                 RepartitionExec: partitioning=Hash([c_custkey@0], 16), input_partitions=1, maintains_sort_order=true                       |
|               |                   ProjectionExec: expr=[c_custkey@2 as c_custkey, o_orderkey@0 as o_orderkey]                                              |
|               |                     SortMergeJoinExec: join_type=Right, on=[(o_custkey@1, c_custkey@0)]                                                    |
|               |                       SortExec: expr=[o_custkey@1 ASC], preserve_partitioning=[true]                                                       |
|               |                         CoalescePartitionsExec                                                                                             |
|               |                           RepartitionExec: partitioning=Hash([o_custkey@1], 16), input_partitions=16                                       |
|               |                             FilterExec: o_comment@2 NOT LIKE %special%requests%, projection=[o_orderkey@0, o_custkey@1]                    |
|               |                               SchemaCastScanExec                                                                                           |
|               |                                 BytesProcessedExec                                                                                         |
|               |                                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                              |
|               |                       SortExec: expr=[c_custkey@0 ASC], preserve_partitioning=[true]                                                       |
|               |                         CoalescePartitionsExec                                                                                             |
|               |                           RepartitionExec: partitioning=Hash([c_custkey@0], 16), input_partitions=16                                       |
|               |                             SchemaCastScanExec                                                                                             |
|               |                               BytesProcessedExec                                                                                           |
|               |                                 DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                |
|               |                                                                                                                                            |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------+
